--- a/.github/workflows/build-and-test-app.yaml
+++ b/.github/workflows/build-and-test-app.yaml
@@ -16,7 +16,7 @@ jobs:
           echo "built file" >> build/built-file.txt
                   - name: Upload a Build Artifact
       - uses: actions/upload-artifact@v4.4.3
-        if: inputs.upload_name != ""
+        if: inputs.upload_name != ''
         with:
           path: path_to_upload_as_artifact
           
