--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,8 @@ on:
 jobs: 
   build-and-test:
     uses: ./.github/workflows/build-and-test-app.yaml
+    with:
+      path_to_upload_as_artifact: build
 
   deploy:
     needs: [build-and-test]
