--- a/.github/workflows/build-and-test-app.yaml
+++ b/.github/workflows/build-and-test-app.yaml
@@ -23,7 +23,7 @@ jobs:
           ls build -la
 
       - uses: actions/upload-artifact@v4.4.3
-        if: inputs.upload_name != ''
+        if: inputs.path_to_upload_as_artifact != ''
         with:
           path: path_to_upload_as_artifact
           
