--- a/.github/workflows/build-and-test-app.yaml
+++ b/.github/workflows/build-and-test-app.yaml
@@ -25,5 +25,5 @@ jobs:
       - uses: actions/upload-artifact@v4.4.3
         if: inputs.path_to_upload_as_artifact != ''
         with:
-          path: path_to_upload_as_artifact
+          path: ${{ inputs.path_to_upload_as_artifact }}
           
