--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,11 +17,11 @@ jobs:
       - uses: actions/checkout@v4.2.2
 
       - uses: actions/download-artifact@v4.1.8
+        with: 
+          path: build
+          
 
-      - run: |
-          ls -la
-
-      - run: less artifact/built-file.txt
+      - run: less build/built-file.txt
 
       - run: echo "Completed!"
 
