--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,6 +9,7 @@ jobs:
     uses: ./.github/workflows/build-and-test-app.yaml
     with:
       path_to_upload_as_artifact: build
+      upload_name: build
 
   deploy:
     needs: [build-and-test]
@@ -16,10 +17,15 @@ jobs:
     steps: 
       - uses: actions/checkout@v4.2.2
 
-      - uses: actions/download-artifact@v4.1.8
+      - uses: actions/download-artifact@v4.1.
+        with:
+          name: build
 
       - name: Run it somehow
-        run: less artifact/built-file.txt
+        run: less build/built-file.txt
+
+      - name: Look at docs
+        run: less build/docs/doc-file.txt
 
       - run: echo "Completed!"
 
