--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
     steps: 
       - uses: actions/checkout@v4.2.2
 
-      - uses: actions/download-artifact@v4.1.
+      - uses: actions/download-artifact@v4.1.8
         with:
           name: build
 
