--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,14 +18,12 @@ jobs:
       - uses: actions/checkout@v4.2.2
 
       - uses: actions/download-artifact@v4.1.8
-        with:
-          name: build
 
       - name: Run it somehow
-        run: less build/built-file.txt
+        run: less artifact/built-file.txt
 
       - name: Look at docs
-        run: less build/docs/doc-file.txt
+        run: less artifact/docs/doc-file.txt
 
       - run: echo "Completed!"
 
