--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v4.2.2
 
       - uses: actions/download-artifact@v4.1.8
+        with:
+          name: build.zip
 
       - name: Run it somehow
         run: less artifact/built-file.txt
