--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,10 +22,10 @@ jobs:
           name: build
 
       - name: Run it somehow
-        run: less artifact/built-file.txt
+        run: less build/built-file.txt
 
       - name: Look at docs
-        run: less artifact/docs/doc-file.txt
+        run: less build/docs/doc-file.txt
 
       - run: echo "Completed!"
 
