--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,12 @@ jobs:
         with:
           name: build
 
+      - name: List files
+        run: |
+          ls
+          ls build
+          ls build/docs
+
       - name: Run it somehow
         run: less build/built-file.txt
 
