--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/download-artifact@v4.1.8
         with:
           name: build
+          path: build
 
       - name: List files
         run: |
