--- a/.github/workflows/deploy-app-to-dev.yaml
+++ b/.github/workflows/deploy-app-to-dev.yaml
@@ -20,6 +20,6 @@ jobs:
       - name: Run it somehow
         run: less built-file.txt
 
-      - run: echo "Deployed!"
+      - run: echo "Deployed to dev!"
 
     
