--- a/.github/workflows/build-test-upload.yaml
+++ b/.github/workflows/build-test-upload.yaml
@@ -29,9 +29,16 @@ jobs:
           
       - name: Verify build dir
         run: |
+          echo "Root"
           ls
+          
+          echo "build dir"
           ls build
+          
+          echo "jar dir"
           ls build/jar
+          
+          echo "docs dir"
           ls build/docs
 
       - uses: actions/upload-artifact@v4.4.3
