--- a/.github/workflows/deploy-app-to-dev.yaml
+++ b/.github/workflows/deploy-app-to-dev.yaml
@@ -18,7 +18,7 @@ jobs:
           name: ${{ inputs.artifact_name }}
 
       - name: Run it somehow
-        run: less built-file.txt
+        run: less build/jars/app.jar
 
       - run: echo "Deployed to dev!"
 
