--- a/.github/workflows/deploy-app-to-dev.yaml
+++ b/.github/workflows/deploy-app-to-dev.yaml
@@ -17,6 +17,9 @@ jobs:
         with:
           name: ${{ inputs.artifact_name }}
 
+      - name: list some stuff
+        run: ls
+
       - name: Run it somehow
         run: less build/jars/app.jar
 
