--- a/.github/workflows/deploy-app-to-dev.yaml
+++ b/.github/workflows/deploy-app-to-dev.yaml
@@ -17,11 +17,8 @@ jobs:
         with:
           name: ${{ inputs.artifact_name }}
 
-      - name: list some stuff
-        run: ls
-
       - name: Run it somehow
-        run: less build/jars/app.jar
+        run: less jars/app.jar
 
       - run: echo "Deployed to dev!"
 
