--- a/.github/workflows/deploy-app-to-prod.yaml
+++ b/.github/workflows/deploy-app-to-prod.yaml
@@ -18,7 +18,7 @@ jobs:
           name: ${{ inputs.artifact_name }}
 
       - name: Run it somehow
-        run: less build/jars/app.jar
+        run: less jars/app.jar
 
       - run: echo "Deployed to prod!"
 
